[package]
name = "rust_learning"
version = "0.1.0"
authors = ["Steven Dirth <dirthsj@iastate.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
svgmacro = "0.2.2"
serde_json = "1.0.64"
serde = {version = "1.0.125", features = ["derive"]}
clap = "2.33.3"